More tweaks for rendering results nicely

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 SLAB_TOKEN=
 GLEAN_TOKEN=
 BETA_USERS=
+CREATE_DATASOURCE=true
+SYNC_USERS=true
+SYNC_POSTS=true
+GET_DOCS_COUNT=true
+IS_TEST=false
+FORCE_REUPLOAD=false
+BATCH_SIZE=100
